정답, 오답 판별